solved issue with harvest footer on mobile devices

--- a/app/assets/stylesheets/pages/_harvests.scss
+++ b/app/assets/stylesheets/pages/_harvests.scss
@@ -159,7 +159,6 @@
   }
   .go-to-harvest {
     border-radius: 0px;
-    bottom: 0px;
     right: inherit;
     width: 100%
   }
